typo && fixing tests